--- a/532_grp23.yaml
+++ b/532_grp23.yaml
@@ -5,4 +5,9 @@ channels:
 dependencies:
   - pandas
   - ipykernel
+  - plotly
+  - seaborn
+  - nbformat
+  - psutil
+  - requests
 prefix: /opt/miniconda3/envs/532_grp23
